[package]
name = "ble_discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.2"
tokio = {version="1.19.2", features=["full"]}
log = "0.4.17"
pretty_env_logger = "0.4.0"
anyhow = "1.0.57"
uuid ="*"
