[package]
name = "ble_discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.2"
tokio = {version="1.19.2", features=["full"]}
log = "0.4.17"
pretty_env_logger = "0.4.0"
anyhow = "1.0.57"
uuid = "0.8.2" # NOTE: MUST match bleplug which is OLD 
byteorder = "1.4.3"
bitflags = "1.3.2"
dialoguer = {version="0.10.1", features=["history", "completion"]}
lalrpop-util = {version="0.19.7", features=["lexer"]}
regex = "1"
async-trait = "0.1.56"
futures = "0.3.21"


[build-dependencies]
lalrpop = "0.19.7"