[package]
name = "tlv_struct_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
anyhow = "1.0.57"
regex = "1"
tlv-derive = {path="../libs/tlv-derive"}
tlv-packed = {path="../libs/tlv-packed"}
tlv-stream = {path="../libs/tlv-stream"}
streaming-iterator = { version = "0.1.5", default-features = false }
