[package]
name = "matter-btp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
btleplug = "0.9.2"
tokio = {version="1.19.2", features=["full"]}
log = "0.4.17"
anyhow = "1.0.57"
uuid = "0.8.2" # NOTE: MUST match bleplug which is OLD 
bitflags = "1.3.2"
async-trait = "0.1.56"
futures = "0.3.21"
mock_instant = { version = "0.2", features = ["sync"] }
byteorder = "1.4.3"
derive_builder = "0.11.2"
