[package]
name = "matter-packets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
byteordered = "0.6.0"
bitflags = "1.3.2"
byteorder = "1.4.3"
derive_builder = "0.11.2"

matter-types = { path="../matter-types" }
