[package]
name = "tag-length-value-stream"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Litvin <andy314@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version="1.4.3", default-features=false}
streaming-iterator = {version="0.1.5", default-features=false}