[package]
name = "tlv-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
tlv-stream = { path = "../tlv-stream" }
tlv-packed = { path = "../tlv-packed" }
streaming-iterator = { version = "0.1.5", default-features = false }
syn = { version = "1.0.98", features = ["derive", "extra-traits"] }
quote = "1.0.20"
regex = "1.6.0"
anyhow = "1.0.58"
lazy_static = "1.4.0"
proc-macro2 = "1.0.40"
