[package]
name = "fuzz-afl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"

[dependencies.matter-packets]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]